--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
+version: '3.8'
+
 services:
   kong-database:
     image: postgres:latest
-    restart: always
+    restart: no
     networks:
       - kong-net
     environment:
@@ -25,7 +27,7 @@ services:
 
   kong-gateway:
     image: kong:latest
-    restart: always
+    restart: no
     networks:
       - kong-net
     environment:
